# rusty-glove

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
bootloader/: Cargo.toml  memory.x
bootloader/src/: main.rs
firmware/: Cargo.toml  build.rs  memory.x
firmware/src/: lib.rs  logger.rs  metrics.rs  pins.rs  rng.rs  side.rs  state.rs  sync.rs  utils.rs
firmware/src/ble/: adv_loop.rs  bonder.rs  device_info.rs  dfu.rs  hid.rs  interboard.rs  mod.rs  nonhid.rs  server.rs
firmware/src/flash/: mod.rs
firmware/src/interboard/: ble.rs  ble_central.rs  ble_peripheral.rs  channel.rs  mod.rs
firmware/src/keys/: chord.rs  layout.rs  mod.rs  scan.rs  unicode.rs
firmware/src/messages/: device_to_device.rs  distributors.rs  mod.rs  transmissions.rs
firmware/src/rgb/: animation.rs  driver.rs  layout.rs  math_utils.rs  mod.rs  runner.rs
firmware/src/rgb/animations/: mod.rs  perlin.rs  rain.rs  snow.rs
firmware/src/usb/: channel.rs  device.rs  hid.rs  mod.rs  picotool.rs
layouts/: rusty-glove-layout.json  rusty-glove.kl  rusty-glove.yaml
macros/src/: lib.rs
shared/: Cargo.toml
shared/src/: cmd.rs  device_to_host.rs  host_to_device.rs  side.rs
turbowaker/: wake.rs.patch
