[package]
edition = "2021"
name = "bootloader"
version = "0.1.0"
resolver = "2"

[dependencies]
embassy-futures = { version = "0.1.1" }
embassy-sync = { version = "0.6.0", features = [] }
embassy-nrf = { version = "0.2.0", features = ["nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"]}
embassy-embedded-hal = { version = "0.2.0" }
embassy-boot = { version = "0.3", default-features = false }
embassy-boot-nrf = { version = "0.3", default-features = false, features = ["softdevice"] }
embedded-io = "0.6"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
embedded-hal = "1.0"
nrf-softdevice-mbr = { git = "https://github.com/embassy-rs/nrf-softdevice" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

static_cell = "1.1"
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"

[features]
turbowakers = ["embassy-sync/turbowakers"]

default = ["turbowakers"]
