[package]
edition = "2021"
name = "bootloader"
version = "0.1.0"
resolver = "2"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"

defmt = "0.3"
defmt-rtt = "0.4"
embassy-boot = { version = "0.3", default-features = false }
embassy-boot-nrf = { version = "0.3", default-features = false, features = ["softdevice"] }
embassy-embedded-hal = { version = "0.2.0" }
embassy-futures = { version = "0.1.1" }
embassy-nrf = { version = "0.2.0", features = ["nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
embassy-sync = { version = "0.6.1", features = [] }
embassy-executor = { version = "0.6.3", features = [
  "nightly",
  "arch-cortex-m",
  "executor-thread",
  "integrated-timers",
  "nightly",
] }
embedded-hal = "1.0"
embedded-io = "0.6"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
nrf-softdevice-mbr = { git = "https://github.com/embassy-rs/nrf-softdevice" }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

static_cell = "2.1"

[features]
turbowakers = ["embassy-sync/turbowakers", "embassy-executor/turbowakers"]
logging = ["embassy-boot/defmt", "embassy-boot-nrf/defmt"]

default = ["turbowakers", "logging"]
