[package]
name = "rusty-glove"
version = "0.1.0"
edition = "2021"
resolver = "2"
repository = "https://github.com/simmsb/rusty-glove"
description = "Firmware for the Glove80 keyboard written in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "binary"
path = "src/bin/binary.rs"

[dependencies]
bitfield-struct = "0.8.0"
byte-slice-cast = { version = "1.2.2", default-features = false }
bytemuck = { version = "1.18.0", default-features = false, features = [
  "derive",
  "min_const_generics",
  "must_cast",
] }
cichlid = { git = "https://github.com/simmsb/cichlid", version = "0.2.1", default-features = false, features = [
  "nightly",
  "no-std",
  "serde",
] }
cordic = "0.1.5"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
crc32fast = { version = "1.4.2", default-features = false }
defmt = { version = "0.3.8", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
dilemma_macros = { path = "../macros" }
display-interface = { version = "0.5.0", optional = true }
ekv = { git = "https://github.com/embassy-rs/ekv", version = "0.1.0", features = [
  "crc",
  "align-4",
  "page-size-4096",
] }
embassy-embedded-hal = { version = "0.2.0" }
embassy-executor = { version = "0.6.0", features = [
  "nightly",
  "arch-cortex-m",
  "executor-thread",
  "integrated-timers",
  "nightly",
] }
embassy-futures = { version = "0.1.1" }
embassy-nrf = { version = "0.2.0", features = [
  "nrf52840",
  "time-driver-rtc1",
  "gpiote",
  "unstable-pac",
  "time",
] }
embassy-os-guess = { git = "https://github.com/simmsb/embassy-os-guess", version = "0.1.0" }
embassy-sync = { version = "0.6.0", features = [] }
embassy-time = { version = "0.3.2" } #, features = [ "generic-queue" ] }
embassy-usb = { version = "0.3.0", features = ["max-interface-count-6"] }
embedded-graphics = { version = "0.8.1", optional = true }
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2" }
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io-async = { version = "0.6.1" }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
embassy-boot = { version = "0.3", default-features = false }
embassy-boot-nrf = { version = "0.3", default-features = false, features = ["softdevice"] }
fixed = { version = "1.28.0", features = ["serde"] }
fixed-macro = "1.2.0"
futures = { version = "0.3.30", default-features = false, features = [
  "async-await",
  "cfg-target-has-atomic",
  "unstable",
] }
heapless = "0.8.0"
itertools = { version = "0.12.1", default-features = false }
keyberon = { git = "https://github.com/simmsb/keyberon", version = "0.2.0" }
# keyberon = { git = "https://github.com/TeXitoi/keyberon", version = "0.2.0" }
libm = { version = "0.2.8", optional = true }
log_log = { package = "log", version = "0.4.22", optional = true }
maitake-sync = { git = "https://github.com/simmsb/mycelium", branch = "sync-fix", features = [
  "no-cache-pad",
], default-features = false }
micromath = { version = "2.1.0", default-features = false }
mipidsi = { git = "https://github.com/almindor/mipidsi", optional = true }
nrf-dfu-target = { git = "https://github.com/AliMoal/nrf-dfu.git", version = "0.1.0", features = ["async"] }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", features = [
  "nrf52840",
  "s140",
  "ble-peripheral",
  "ble-central",
  "critical-section-impl",
  "ble-gatt-server",
  "ble-gatt-client",
  "ble-sec",
  "evt-max-size-256",
] }
nrf-softdevice-s140 = { git = "https://github.com/embassy-rs/nrf-softdevice" }
num = { version = "0.4.3", default-features = false }
num_enum = { version = "0.7.3", default-features = false }
once_cell = { version = "1.19.0", features = [
  "atomic-polyfill",
], default-features = false }
packed_struct = { version = "0.10.1", default-features = false }
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }
panic-reset = "0.1.1"
paste = "1.0.15"
phf = { version = "0.11.2", default-features = false }
portable-atomic = { version = "1.7.0", features = [] }
postcard = { git = "https://github.com/iron-fish/postcard.git", rev = "ab978e84d783290c26a4a801f71072bb9381f97b", features = ['experimental-derive'] }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
serde = { version = "1.0.209", default-features = false, features = ["derive"] }
shared = { path = "../shared" }
static_cell = { version = "2.1.0", features = ["nightly"] }
usbd-hid = "0.8.2"
usbd-human-interface-device = "0.5.0"

[build-dependencies]
chrono = "0.4.38"

[features]
logging = ["log_log"]
probe = [
  "defmt",
  "defmt-rtt",
  "panic-probe",
  "shared/defmt",
  "embassy-embedded-hal/defmt",
  "embassy-sync/defmt",
  "embassy-executor/defmt",
  "embassy-time/defmt",
  "embassy-time/defmt-timestamp-uptime",
  "embassy-nrf/defmt",
  "embassy-usb/defmt",
  "postcard/use-defmt",
  "nrf-softdevice/defmt",
  "heapless/defmt-03",
  "embassy-os-guess/defmt",

]
turbowakers = ["embassy-sync/turbowakers", "embassy-executor/turbowakers"]

side_left = []
side_right = []

control_own_led_effects = []

default_unselected_side = ["probe", "default_no_probe"]
default_no_probe = ["turbowakers"]
default = ["default_unselected_side", "side_right"]

reboot_on_panic = []
